@@ -8,6 +8,10 @@ software-store (0.3.9) UNRELEASED; urgency=low
       ("departments") on key-down (LP: #433828)
   * data/templates/CategoriesView.html:
     - arrow key navigation added (thanks to Stuart Langridge)
+  * softwarestore/db/database.py:
+    - move query parser code into a proper place and default to
+      AND for multiple search terms (LP: #432978)
+    - support boolean expressions in the search terms (AND, OR, NOT)
 
   [ Andrew Higginson ]
   * debian/control:
